# graphviz

./: .clang-format  CMakeLists.txt  LICENSE  README.md  config.txt  main.cpp
include/: mainwindow.hpp
src/: mainwindow.cpp
test/: CMakeLists.txt  simple_tests.cpp
